# Grammify

./: .gitignore  README.md
agent/: agent.py  langgraph.json  main.py  my_agent.py  openai_client.py  pyproject.toml  requirements.txt
agent/agent/: agent.py  agent_state.py  agent_workflow.py  app.py  copy_result.py  delete.py  demo.py  downlod_result.py  grammer_checker.py  open_ai_client.py  sentiment.py  summarizer.py  text_to_speech.py  translator.py
client/: package-lock.json  package.json
client/src/app/: layout.tsx  page.jsx  page.tsx
client/src/app/api/copilotkit/: route.js
client/src/app/chatpage/: page.jsx
