[tool.poetry]
name = "agent"
version = "0.1.0"
description = ""
authors = ["Arkaprava Dhar <raj2003dhar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.14"
langgraph = "^0.2.60"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
