[tool.poetry]
name = "agent"
version = "0.1.0"
description = ""
authors = ["Arkaprava Dhar <raj2003dhar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.14"
langgraph = "^0.2.60"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
python-dotenv = "^1.0.1"
transformers = "^4.47.1"
googletrans = "^4.0.2"
gtts = "^2.5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
